# pupbot

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  controllers.yaml  package.xml  pupbot.rosinstall
.github/: FUNDING.yml
.github/workflows/: docker-deploy-bot.yml  formatter.yml  noetic-ci.yml  ros1-build-check-bot.yml
Arduino/PupBot_driver_for_ICM_20948_ver2/: PupBot_driver_for_ICM_20948_ver2.ino
include/: dynamixel_control.h  dynamixel_controller.h  dynamixel_writer.h  inverse_kinematics.h  key_control.h  move_pupbot.h  posture_stabilization.h  pupbot_controller.h  pupbot_controller_ds4.h  pupbot_stabilizer.h  standing_motion.h  trot_gait.h
launch/: dynamixel_writer.launch  move_pupbot.launch  move_pupbot_ds4.launch  move_quadruped_robot.launch  pupbot_bringup.launch  pupbot_empty_world.launch  pupbot_gazebo.launch  pupbot_rviz.launch  pupbot_simulation.launch
quadruped_robot/: CMakeLists.txt  README.md  controllers.yaml
quadruped_robot/launch/: quadruped_robot_empty_world.launch  quadruped_robot_rviz.launch
quadruped_robot/rviz/: quadruped_robot.rviz
quadruped_robot/src/: move_quadruped_robot.cpp  move_quadruped_robot.h  quadruped_robot_controller.cpp
quadruped_robot/stl/: leg_lower.stl  leg_shoulder.stl  leg_upper.stl
quadruped_robot/urdf/: quadruped_robot.xacro
rviz/: pupbot.rviz
src/: dynamixel_control.cpp  dynamixel_controller.cpp  dynamixel_writer.cpp  inverse_kinematics.cpp  key_control.cpp  move_pupbot.cpp  move_quadruped_robot.cpp  move_quadruped_robot.h  posture_stabilization.cpp  pupbot_controller.cpp  pupbot_controller_ds4.cpp  pupbot_stabilizer.cpp  standing_motion.cpp  trot_gait.cpp
urdf/: pupbot.xacro  quadruped_robot.xacro
