<?xml version="1.0"?>
<package format="2">
  <name>pupbot</name>
  <version>1.0.1</version>
  <description>ROS package for quadruped robot PupBot</description>
  <maintainer email="Alpaca-zip@todo.todo">Alpaca-zip</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>icm_20948</depend>
  <depend>dynamixel_workbench</depend>
  <depend>rqt</depend>
</package>
