<?xml version="1.0"?>
<package format="2">
  <name>pupbot</name>
  <version>1.0.1</version>
  <description>ROS package for quadruped robot PupBot.</description>
  <maintainer email="Alpaca-zip@todo.todo">Alpaca-zip</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamixel_workbench</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>  
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>icm_20948</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
